tests/chapter_18/invalid_types/initializers/static_initializer_too_long.c
struct pair {
    int a;
    int b;
};

struct pair p = {1, 2, 3};